# HanamiRIP-CN

./: .gitignore  README.md  SECURITY.md  index.html  package.json  package.json.md  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/instructions/: css-comments.instructions.md  html-comments.instructions.md  json-comments.instructions.md  ps1-comments.instructions.md  rust-comments.instructions.md  toml-comments.instructions.md  ts-comments.instructions.md  vue-comments.instructions.md
.github/workflows/: ci.yml
apps/desktop/: vite.config.ts
apps/desktop/backend/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json.md
apps/desktop/backend/src/: main.rs
apps/desktop/backend/src/services/: mod.rs
apps/desktop/backend/src/services/bangumi/: api.rs  commands.rs  filters.rs  mod.rs  models.rs  translate.rs
apps/desktop/backend/src/services/media/: mod.rs
apps/desktop/backend/src/services/storage/: mod.rs
apps/desktop/backend/src/services/torrent/: mod.rs
apps/desktop/frontend/: App.vue  env.d.ts  index.html  main.ts  style.css
apps/desktop/frontend/modules/download/composables/: useDownloadPage.ts
apps/desktop/frontend/modules/download/pages/: DownloadPage.vue
apps/desktop/frontend/modules/download/types/: download.ts
apps/desktop/frontend/modules/query/components/: StaffModal.vue
apps/desktop/frontend/modules/query/composables/: useQueryPage.ts
apps/desktop/frontend/modules/query/pages/: QueryPage.vue
apps/desktop/frontend/modules/search/components/: AliasModal.vue
apps/desktop/frontend/modules/search/composables/: useSearchPage.ts
apps/desktop/frontend/modules/search/pages/: SearchPage.vue
apps/desktop/frontend/modules/search/types/: search.ts
apps/desktop/frontend/modules/tracking/composables/: useTracking.ts
apps/desktop/frontend/modules/tracking/pages/: BacklogPage.vue  FinishedPage.vue  WatchingPage.vue
apps/desktop/frontend/modules/tracking/types/: anime.ts  tracking.ts
apps/desktop/frontend/modules/tracks/components/: MixQueueDetailModal.vue
apps/desktop/frontend/shared/components/: AppTitlebar.vue
apps/desktop/frontend/shared/composables/: useExternalLink.ts  useWindowControls.ts
apps/desktop/frontend/shared/types/: page.ts
apps/desktop/frontend/shared/utils/: format.ts  tauri.ts
crates/baidu_verify/: Cargo.toml
crates/baidu_verify/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md
scripts/: banner.ps1  clean.js  setup-env.ps1  setup-env.sh
src/: App.vue  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/baidu_verify/: Cargo.toml
src-tauri/src/: external.rs  main.rs  media.rs  storage.rs  torrent.rs
src-tauri/src/bangumi/: api.rs  commands.rs  filters.rs  mod.rs  models.rs  translate.rs
src/components/: AliasModal.vue  MixQueueDetailModal.vue  StaffModal.vue
src/composables/: useDownloadPage.ts  useExternalLink.ts  useQueryPage.ts  useSearchPage.ts  useTracksPage.ts  useWindowControls.ts
src/pages/: BacklogPage.vue  DownloadPage.vue  FinishedPage.vue  QueryPage.vue  SearchPage.vue  TracksPage.vue  WatchingPage.vue
src/types/: anime.ts  download.ts  page.ts  search.ts  tracking.ts  tracks.ts
(+3 files in other folders)
