[package]
name = "hanamirip-cn"
version = "0.1.0"
description = "Tauri + Vite + Vue + NaiveUI template"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
libloading = "0.8"
once_cell = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli", "deflate", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5"
librqbit = "8.1.1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
